# Kaleidoscope

./: CMakeLists.txt  README.md
cmake/: FindLLVM.cmake
src/global/: Global.cpp  Global.h
src/include/: KaleidoscopeJIT.h
src/lexer/: Lexer.cpp  Lexer.h
src/parser/: Expr.cpp  Expr.h  Function.cpp  Function.h  Parser.cpp  Parser.h
src/shell/: main.cpp  shell.cpp  shell.h
test/: LexerTest.cpp  ParserTest.cpp
